--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <h3 class="text-center">通常施術費</h3>
           <p class="text-center">￥４５００円（税込）</p>
           <p class="text-center">↓</p>
-          <div class="row col-md-3 justify-content-center">
+          <div class="row col-sm-12 justify-content-center">
             <p class="text-center">初回特別価格</p>
             <p class="problem-text text-center">￥１０００円（税込）</p>
           </div>
