料金説明を追加

--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <!-- ナビゲーションバー -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a class="navbar-brand" href="#">Rest整体院</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="#page1" data-toggle="collapse" data-target=".navbar-collapse">トップ</a></li>
-              <li class="nav-item"><a class="nav-link" href="#page2" data-toggle="collapse" data-target=".navbar-collapse">自己紹介</a></li>
-              <li class="nav-item"><a class="nav-link" href="#page3" data-toggle="collapse" data-target=".navbar-collapse">お悩み</a></li>
-              <li class="nav-item"><a class="nav-link" href="#page17" data-toggle="collapse" data-target=".navbar-collapse">料金</a></li>
-              <li class="nav-item"><a class="nav-link" href="#page18" data-toggle="collapse" data-target=".navbar-collapse">営業時間</a></li>
-              <li class="nav-item"><a class="nav-link" href="#page19" data-toggle="collapse" data-target=".navbar-collapse">アクセス</a></li>
-                <!-- 他のページへのリンク -->
-            </ul>
-        </div>
-    </nav>
-
-    <!-- ページのコンテンツ -->
     <div class="container mt-4">
+      <!-- ナビゲーションバー -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+          <a class="navbar-brand" href="#">Rest整体院</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="#page1" data-toggle="collapse" data-target=".navbar-collapse">トップ</a></li>
+                <li class="nav-item"><a class="nav-link" href="#page2" data-toggle="collapse" data-target=".navbar-collapse">自己紹介</a></li>
+                <li class="nav-item"><a class="nav-link" href="#page3" data-toggle="collapse" data-target=".navbar-collapse">お悩み</a></li>
+                <li class="nav-item"><a class="nav-link" href="#page17" data-toggle="collapse" data-target=".navbar-collapse">料金</a></li>
+                <li class="nav-item"><a class="nav-link" href="#page18" data-toggle="collapse" data-target=".navbar-collapse">営業時間</a></li>
+                <li class="nav-item"><a class="nav-link" href="#page19" data-toggle="collapse" data-target=".navbar-collapse">アクセス</a></li>
+                  <!-- 他のページへのリンク -->
+              </ul>
+          </div>
+      </nav>
+
+      <!-- ページのコンテンツ -->
       <div id="page1" class="row">
         <div class="col-md-6 col-sm-6 mb-4 d-flex flex-column justify-content-center align-items-center">
           <h2 class="text-center">Rest<br>整体院</h2>
@@ -205,6 +205,7 @@
           <p class="text-center">営業時間</p>
           <p class="text-center">10:00 ~ 19:00(最終受付)</p>
           <p class="text-center">※完全予約制</p>
+          <p class="text-center problem-text">お支払いは現金のみとなっています。</p>
           <div class="row justify-content-center">
             <h3 class="text-center">休み：</h3>
             <h3 class="text-center problem-text">不定休</h3>
