以下の修正 ①文字列のレスポンシブ対応 ②画面からはみ出る一部のオブジェクトをレスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -2,33 +2,34 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="JR総持寺駅徒歩3分　1人1人の症状に合わせたオーダーメイド治療。痛くないソフトな施術。肩こり・腰痛などの慢性痛や疾患に対するリハビリも是非ご相談ください。">
     <title>整骨院ウェブサイト</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container mt-4">
-      <!-- ナビゲーションバー -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-          <a class="navbar-brand" href="#">Rest整体院</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#page1" data-toggle="collapse" data-target=".navbar-collapse">トップ</a></li>
-                <li class="nav-item"><a class="nav-link" href="#page2" data-toggle="collapse" data-target=".navbar-collapse">自己紹介</a></li>
-                <li class="nav-item"><a class="nav-link" href="#page3" data-toggle="collapse" data-target=".navbar-collapse">お悩み</a></li>
-                <li class="nav-item"><a class="nav-link" href="#page17" data-toggle="collapse" data-target=".navbar-collapse">料金</a></li>
-                <li class="nav-item"><a class="nav-link" href="#page18" data-toggle="collapse" data-target=".navbar-collapse">営業時間</a></li>
-                <li class="nav-item"><a class="nav-link" href="#page19" data-toggle="collapse" data-target=".navbar-collapse">アクセス</a></li>
-                  <!-- 他のページへのリンク -->
-              </ul>
-          </div>
-      </nav>
+    <!-- ナビゲーションバー -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <a class="navbar-brand" href="#">Rest整体院</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link" href="#page1" data-toggle="collapse" data-target=".navbar-collapse">トップ</a></li>
+              <li class="nav-item"><a class="nav-link" href="#page2" data-toggle="collapse" data-target=".navbar-collapse">自己紹介</a></li>
+              <li class="nav-item"><a class="nav-link" href="#page3" data-toggle="collapse" data-target=".navbar-collapse">お悩み</a></li>
+              <li class="nav-item"><a class="nav-link" href="#page17" data-toggle="collapse" data-target=".navbar-collapse">料金</a></li>
+              <li class="nav-item"><a class="nav-link" href="#page18" data-toggle="collapse" data-target=".navbar-collapse">営業時間</a></li>
+              <li class="nav-item"><a class="nav-link" href="#page19" data-toggle="collapse" data-target=".navbar-collapse">アクセス</a></li>
+                <!-- 他のページへのリンク -->
+            </ul>
+        </div>
+    </nav>
 
       <!-- ページのコンテンツ -->
+    <div class="container">
       <div id="page1" class="row">
         <div class="col-md-6 col-sm-6 mb-4 d-flex flex-column justify-content-center align-items-center">
           <h2 class="text-center">Rest<br>整体院</h2>
