--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
       </div>
       <!-- 痛みを伴う施術 -->
       <div id="page7" class="container mt-4">
-        <h2 class="text-center">痛みを伴う施術は一切致しません</h2>
+        <h2 class="text-center">痛みを伴う施術は<br>一切致しません</h2>
         <div class="row">
           <p>ゴリゴリほぐしたり、バキバキ骨を鳴らす事は体を痛める可能性が高いので当院では致しておりません。可能な限り安全な施術を行います。</p>
         </div>
       </div>
       <!-- 施術について -->
       <div id="page8" class="container mt-4">
-        <h2 class="text-center">施術について</h2>
+        <h2 class="text-center">施術</h2>
         <div class="row">
           <p>1人1人の症状に合わせた治療を心掛けています。体の状態にもよりますが、基本的には指圧で押す手技ではなく、筋肉やその上を走行 している筋膜に対して優しく摩るような手技やストレッチがメインになります。その他にもご状況に応じて筋力トレーニングや動作訓練なども取り入れています。</p>
         </div>
@@ -120,7 +120,7 @@
       </div>
       <!-- 患者施術後の変化の一例 -->
       <div id="page12" class="container mt-4">
-        <h3 class="text-center">患者様施術後の変化の一例</h3>
+        <h3 class="text-center">患者様施術後の変化の<br>一例</h3>
         <div class="row">
           <div class="col-md-6 col-sm-6">
               <img src="img/12-1.jpg" alt="施術風景1" class="img-fluid">
@@ -220,7 +220,7 @@
             <img src="img/19.jpg" alt="院の所在" class="img-fluid">
           </div>
         </div>
-        <h5 class="text-center mt-4">住所：大阪府茨木市2丁目２５番４５号　１号室</h5>
+        <h5 class="text-center mt-4">住所：大阪府茨木市2丁目２５番<br>４５号　１号室</h5>
         <div class="row justify-content-center">
           <div class="col-md-12 col-sm-12 mb-4">
             <iframe class="mx-auto d-block" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3275.1670909428763!2d135.57765497582167!3d34.82689117643137!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e30030d2cf87%3A0xaf652042af563e2a!2zUmVzdOaVtOS9k-mZog!5e0!3m2!1sja!2sjp!4v1703933606186!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
